--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "framer-motion": "^10.16.1",
+    "json-server": "^0.17.3",
     "next": "13.4.19",
     "npm-check-updates": "^16.13.2",
     "react": "18.2.0",
